# process_motion

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  process_motion.service  process_motion_wrapper
include/: countdown.hpp  power.h
src/: .power.cpp.swp  main.cpp  power.cpp  power.d  test_countdown.cpp
